--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "tazorax/mcmaps",
     "description": "PHP script to read / write custom Minecraft map item images",
     "type": "library",
-    "license": "Creative Commons Attribution 3.0 Unported (CC BY 3.0)",
+    "license": "CC-BY-3.0",
     "authors": [
         {
             "name": "Kroc Camen",
